[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio-rustls","postgres","macros","chrono","uuid"
] }
chrono = { version = "0.4", features = ["clock","serde"] }
uuid = { version="1", features=["v4"] }
hex = "0.4"
blake3 = "1"
async-trait = "0.1"

engine = { path = "../engine" }

